<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Main3Activity"
    android:background="@drawable/back3">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:text="@string/welcome"
        android:textSize="50dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btn1"
        android:layout_centerHorizontal="true"
        android:text="@string/color"
        android:textSize="20sp" />

    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn1"
        android:text="@string/red"
        android:layout_centerInParent="true"
        android:background="#ff0303" />
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn2"
        android:text="@string/green"
        android:layout_centerInParent="true"
        android:layout_below="@id/btn1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#2fff00"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/btn3"
        android:text="@string/blue"
        android:layout_centerInParent="true"
        android:layout_below="@id/btn2"
        android:background="#0044ff"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/show_color"
        android:layout_below="@id/btn3"
        android:layout_marginTop="15dp"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="30dp"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/time"
        android:layout_marginRight="5dp"
        android:layout_alignBottom="@id/time"
        android:text="@string/time"
        android:textSize="20dp"/>
    <Button
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/quit"
        android:background="#e6122b"
        android:textColor="#fff"
        android:padding="8dp"
        android:layout_below="@id/show_color"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="24dp"
        android:id="@+id/quit"/>
</RelativeLayout>