<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:background="@drawable/back4">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/press"
        android:textSize="20dp"
        android:id="@+id/press"/>
    <Button
        android:id="@+id/quiz"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/quiz"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/press"
        android:background="#1aedaa"/>
    <Button
        android:id="@+id/switchcase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/switchcase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_below="@id/quiz"
        android:background="#1aedaa"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/author"
        android:textSize="20dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/welcome"
        android:text="@string/welcome"
        android:textSize="50dp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/time"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="40dp"
        android:layout_marginRight="30dp"
        android:textSize="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@id/time"
        android:layout_marginRight="5dp"
        android:layout_alignBottom="@id/time"
        android:text="@string/time"
        android:textSize="20dp"/>
</RelativeLayout>